// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Parser - UDFs > should parse a simple function definition with statements 1`] = `
{
  "comments": [],
  "definitions": [
    {
      "attributes": [],
      "closeBracket": {
        "FullStart": 26,
        "Kind": 101,
        "Leading": [],
        "Length": 1,
        "Start": 26,
        "Text": "]",
        "Trailing": [
          {
            "FullStart": 27,
            "Kind": 6,
            "Leading": [],
            "Length": 1,
            "Start": 27,
            "Text": "
",
            "Trailing": [],
            "Value": undefined,
          },
        ],
        "Value": undefined,
      },
      "closeType": undefined,
      "colon": {
        "FullStart": 10,
        "Kind": 205,
        "Leading": [],
        "Length": 1,
        "Start": 10,
        "Text": ":",
        "Trailing": [
          {
            "FullStart": 11,
            "Kind": 601,
            "Leading": [],
            "Length": 1,
            "Start": 11,
            "Text": " ",
            "Trailing": [],
            "Value": undefined,
          },
        ],
        "Value": undefined,
      },
      "complexObjects": [],
      "directives": [],
      "end": 73,
      "isAdd": false,
      "isDelete": false,
      "isIncomplete": false,
      "isLocal": false,
      "isReplace": false,
      "kind": 1,
      "modifier": undefined,
      "name": {
        "end": 26,
        "isIncomplete": false,
        "kind": 3,
        "start": 12,
        "text": "SimpleFunction",
        "tokens": [
          {
            "FullStart": 12,
            "Kind": 600,
            "Leading": [],
            "Length": 14,
            "Start": 12,
            "Text": "SimpleFunction",
            "Trailing": [],
            "Value": "SimpleFunction",
          },
        ],
      },
      "nameCanonical": undefined,
      "openBracket": {
        "FullStart": 0,
        "Kind": 100,
        "Leading": [
          {
            "FullStart": 0,
            "Kind": 6,
            "Leading": [],
            "Length": 1,
            "Start": 0,
            "Text": "
",
            "Trailing": [],
            "Value": undefined,
          },
        ],
        "Length": 1,
        "Start": 1,
        "Text": "[",
        "Trailing": [],
        "Value": undefined,
      },
      "start": 1,
      "statements": [
        {
          "action": {
            "end": 40,
            "isIncomplete": false,
            "kind": 3,
            "start": 37,
            "text": "Log",
            "tokens": [
              {
                "FullStart": 37,
                "Kind": 600,
                "Leading": [],
                "Length": 3,
                "Start": 37,
                "Text": "Log",
                "Trailing": [
                  {
                    "FullStart": 40,
                    "Kind": 601,
                    "Leading": [],
                    "Length": 1,
                    "Start": 40,
                    "Text": " ",
                    "Trailing": [],
                    "Value": undefined,
                  },
                ],
                "Value": "Log",
              },
            ],
          },
          "args": [
            {
              "end": 50,
              "kind": 4,
              "start": 43,
              "token": {
                "FullStart": 43,
                "Kind": 604,
                "Leading": [],
                "Length": 7,
                "Start": 43,
                "Text": ""Hello"",
                "Trailing": [
                  {
                    "FullStart": 50,
                    "Kind": 6,
                    "Leading": [],
                    "Length": 1,
                    "Start": 50,
                    "Text": "
",
                    "Trailing": [],
                    "Value": undefined,
                  },
                ],
                "Value": "Hello",
              },
              "value": ""Hello"",
            },
          ],
          "end": 50,
          "kind": 12,
          "label": {
            "end": 34,
            "isIncomplete": false,
            "kind": 3,
            "start": 32,
            "text": "01",
            "tokens": [
              {
                "FullStart": 28,
                "Kind": 603,
                "Leading": [
                  {
                    "FullStart": 28,
                    "Kind": 601,
                    "Leading": [],
                    "Length": 4,
                    "Start": 28,
                    "Text": "    ",
                    "Trailing": [],
                    "Value": undefined,
                  },
                ],
                "Length": 2,
                "Start": 32,
                "Text": "01",
                "Trailing": [
                  {
                    "FullStart": 34,
                    "Kind": 601,
                    "Leading": [],
                    "Length": 1,
                    "Start": 34,
                    "Text": " ",
                    "Trailing": [],
                    "Value": undefined,
                  },
                ],
                "Value": "01",
              },
            ],
          },
          "start": 32,
        },
        {
          "action": {
            "end": 66,
            "isIncomplete": false,
            "kind": 3,
            "start": 60,
            "text": "Return",
            "tokens": [
              {
                "FullStart": 60,
                "Kind": 600,
                "Leading": [],
                "Length": 6,
                "Start": 60,
                "Text": "Return",
                "Trailing": [
                  {
                    "FullStart": 66,
                    "Kind": 601,
                    "Leading": [],
                    "Length": 1,
                    "Start": 66,
                    "Text": " ",
                    "Trailing": [],
                    "Value": undefined,
                  },
                ],
                "Value": "Return",
              },
            ],
          },
          "args": [
            {
              "end": 73,
              "kind": 4,
              "start": 69,
              "token": {
                "FullStart": 69,
                "Kind": 403,
                "Leading": [],
                "Length": 4,
                "Start": 69,
                "Text": "True",
                "Trailing": [
                  {
                    "FullStart": 73,
                    "Kind": 6,
                    "Leading": [],
                    "Length": 1,
                    "Start": 73,
                    "Text": "
",
                    "Trailing": [],
                    "Value": undefined,
                  },
                ],
                "Value": "True",
              },
              "value": "True",
            },
          ],
          "end": 73,
          "kind": 12,
          "label": {
            "end": 57,
            "isIncomplete": false,
            "kind": 3,
            "start": 55,
            "text": "02",
            "tokens": [
              {
                "FullStart": 51,
                "Kind": 603,
                "Leading": [
                  {
                    "FullStart": 51,
                    "Kind": 601,
                    "Leading": [],
                    "Length": 4,
                    "Start": 51,
                    "Text": "    ",
                    "Trailing": [],
                    "Value": undefined,
                  },
                ],
                "Length": 2,
                "Start": 55,
                "Text": "02",
                "Trailing": [
                  {
                    "FullStart": 57,
                    "Kind": 601,
                    "Leading": [],
                    "Length": 1,
                    "Start": 57,
                    "Text": " ",
                    "Trailing": [],
                    "Value": undefined,
                  },
                ],
                "Value": "02",
              },
            ],
          },
          "returnValue": {
            "end": 73,
            "kind": 4,
            "start": 69,
            "token": {
              "FullStart": 69,
              "Kind": 403,
              "Leading": [],
              "Length": 4,
              "Start": 69,
              "Text": "True",
              "Trailing": [
                {
                  "FullStart": 73,
                  "Kind": 6,
                  "Leading": [],
                  "Length": 1,
                  "Start": 73,
                  "Text": "
",
                  "Trailing": [],
                  "Value": undefined,
                },
              ],
              "Value": "True",
            },
            "value": "True",
          },
          "start": 55,
        },
      ],
      "type": {
        "end": 10,
        "isIncomplete": false,
        "kind": 3,
        "start": 2,
        "text": "Function",
        "tokens": [
          {
            "FullStart": 2,
            "Kind": 600,
            "Leading": [],
            "Length": 8,
            "Start": 2,
            "Text": "Function",
            "Trailing": [],
            "Value": "Function",
          },
        ],
      },
    },
  ],
  "end": 74,
  "errors": [],
  "kind": 0,
  "lineOffsets": [
    0,
    1,
    28,
    51,
    74,
  ],
  "start": 0,
  "text": "
[Function: SimpleFunction]
    01 : Log : "Hello"
    02 : Return : True
",
  "tokens": [
    {
      "FullStart": 0,
      "Kind": 100,
      "Leading": [
        {
          "FullStart": 0,
          "Kind": 6,
          "Leading": [],
          "Length": 1,
          "Start": 0,
          "Text": "
",
          "Trailing": [],
          "Value": undefined,
        },
      ],
      "Length": 1,
      "Start": 1,
      "Text": "[",
      "Trailing": [],
      "Value": undefined,
    },
    {
      "FullStart": 2,
      "Kind": 600,
      "Leading": [],
      "Length": 8,
      "Start": 2,
      "Text": "Function",
      "Trailing": [],
      "Value": "Function",
    },
    {
      "FullStart": 10,
      "Kind": 205,
      "Leading": [],
      "Length": 1,
      "Start": 10,
      "Text": ":",
      "Trailing": [
        {
          "FullStart": 11,
          "Kind": 601,
          "Leading": [],
          "Length": 1,
          "Start": 11,
          "Text": " ",
          "Trailing": [],
          "Value": undefined,
        },
      ],
      "Value": undefined,
    },
    {
      "FullStart": 12,
      "Kind": 600,
      "Leading": [],
      "Length": 14,
      "Start": 12,
      "Text": "SimpleFunction",
      "Trailing": [],
      "Value": "SimpleFunction",
    },
    {
      "FullStart": 26,
      "Kind": 101,
      "Leading": [],
      "Length": 1,
      "Start": 26,
      "Text": "]",
      "Trailing": [
        {
          "FullStart": 27,
          "Kind": 6,
          "Leading": [],
          "Length": 1,
          "Start": 27,
          "Text": "
",
          "Trailing": [],
          "Value": undefined,
        },
      ],
      "Value": undefined,
    },
    {
      "FullStart": 28,
      "Kind": 603,
      "Leading": [
        {
          "FullStart": 28,
          "Kind": 601,
          "Leading": [],
          "Length": 4,
          "Start": 28,
          "Text": "    ",
          "Trailing": [],
          "Value": undefined,
        },
      ],
      "Length": 2,
      "Start": 32,
      "Text": "01",
      "Trailing": [
        {
          "FullStart": 34,
          "Kind": 601,
          "Leading": [],
          "Length": 1,
          "Start": 34,
          "Text": " ",
          "Trailing": [],
          "Value": undefined,
        },
      ],
      "Value": "01",
    },
    {
      "FullStart": 35,
      "Kind": 205,
      "Leading": [],
      "Length": 1,
      "Start": 35,
      "Text": ":",
      "Trailing": [
        {
          "FullStart": 36,
          "Kind": 601,
          "Leading": [],
          "Length": 1,
          "Start": 36,
          "Text": " ",
          "Trailing": [],
          "Value": undefined,
        },
      ],
      "Value": undefined,
    },
    {
      "FullStart": 37,
      "Kind": 600,
      "Leading": [],
      "Length": 3,
      "Start": 37,
      "Text": "Log",
      "Trailing": [
        {
          "FullStart": 40,
          "Kind": 601,
          "Leading": [],
          "Length": 1,
          "Start": 40,
          "Text": " ",
          "Trailing": [],
          "Value": undefined,
        },
      ],
      "Value": "Log",
    },
    {
      "FullStart": 41,
      "Kind": 205,
      "Leading": [],
      "Length": 1,
      "Start": 41,
      "Text": ":",
      "Trailing": [
        {
          "FullStart": 42,
          "Kind": 601,
          "Leading": [],
          "Length": 1,
          "Start": 42,
          "Text": " ",
          "Trailing": [],
          "Value": undefined,
        },
      ],
      "Value": undefined,
    },
    {
      "FullStart": 43,
      "Kind": 604,
      "Leading": [],
      "Length": 7,
      "Start": 43,
      "Text": ""Hello"",
      "Trailing": [
        {
          "FullStart": 50,
          "Kind": 6,
          "Leading": [],
          "Length": 1,
          "Start": 50,
          "Text": "
",
          "Trailing": [],
          "Value": undefined,
        },
      ],
      "Value": "Hello",
    },
    {
      "FullStart": 51,
      "Kind": 603,
      "Leading": [
        {
          "FullStart": 51,
          "Kind": 601,
          "Leading": [],
          "Length": 4,
          "Start": 51,
          "Text": "    ",
          "Trailing": [],
          "Value": undefined,
        },
      ],
      "Length": 2,
      "Start": 55,
      "Text": "02",
      "Trailing": [
        {
          "FullStart": 57,
          "Kind": 601,
          "Leading": [],
          "Length": 1,
          "Start": 57,
          "Text": " ",
          "Trailing": [],
          "Value": undefined,
        },
      ],
      "Value": "02",
    },
    {
      "FullStart": 58,
      "Kind": 205,
      "Leading": [],
      "Length": 1,
      "Start": 58,
      "Text": ":",
      "Trailing": [
        {
          "FullStart": 59,
          "Kind": 601,
          "Leading": [],
          "Length": 1,
          "Start": 59,
          "Text": " ",
          "Trailing": [],
          "Value": undefined,
        },
      ],
      "Value": undefined,
    },
    {
      "FullStart": 60,
      "Kind": 600,
      "Leading": [],
      "Length": 6,
      "Start": 60,
      "Text": "Return",
      "Trailing": [
        {
          "FullStart": 66,
          "Kind": 601,
          "Leading": [],
          "Length": 1,
          "Start": 66,
          "Text": " ",
          "Trailing": [],
          "Value": undefined,
        },
      ],
      "Value": "Return",
    },
    {
      "FullStart": 67,
      "Kind": 205,
      "Leading": [],
      "Length": 1,
      "Start": 67,
      "Text": ":",
      "Trailing": [
        {
          "FullStart": 68,
          "Kind": 601,
          "Leading": [],
          "Length": 1,
          "Start": 68,
          "Text": " ",
          "Trailing": [],
          "Value": undefined,
        },
      ],
      "Value": undefined,
    },
    {
      "FullStart": 69,
      "Kind": 403,
      "Leading": [],
      "Length": 4,
      "Start": 69,
      "Text": "True",
      "Trailing": [
        {
          "FullStart": 73,
          "Kind": 6,
          "Leading": [],
          "Length": 1,
          "Start": 73,
          "Text": "
",
          "Trailing": [],
          "Value": undefined,
        },
      ],
      "Value": "True",
    },
    {
      "FullStart": 74,
      "Kind": 1,
      "Leading": [],
      "Length": 0,
      "Start": 74,
      "Text": "",
      "Trailing": [],
      "Value": undefined,
    },
  ],
}
`;

exports[`Parser - UDFs > should parse function attributes and statements mixed 1`] = `
{
  "comments": [],
  "definitions": [
    {
      "attributes": [
        {
          "closeName": undefined,
          "colon": {
            "FullStart": 41,
            "Kind": 205,
            "Leading": [],
            "Length": 1,
            "Start": 41,
            "Text": ":",
            "Trailing": [
              {
                "FullStart": 42,
                "Kind": 601,
                "Leading": [],
                "Length": 1,
                "Start": 42,
                "Text": " ",
                "Trailing": [],
                "Value": undefined,
              },
            ],
            "Value": undefined,
          },
          "end": 54,
          "isAdd": false,
          "isDelete": false,
          "isIncomplete": false,
          "isLocal": false,
          "isReplace": false,
          "kind": 2,
          "name": {
            "end": 40,
            "isIncomplete": false,
            "kind": 3,
            "start": 31,
            "text": "Parameter",
            "tokens": [
              {
                "FullStart": 27,
                "Kind": 600,
                "Leading": [
                  {
                    "FullStart": 27,
                    "Kind": 601,
                    "Leading": [],
                    "Length": 4,
                    "Start": 27,
                    "Text": "    ",
                    "Trailing": [],
                    "Value": undefined,
                  },
                ],
                "Length": 9,
                "Start": 31,
                "Text": "Parameter",
                "Trailing": [
                  {
                    "FullStart": 40,
                    "Kind": 601,
                    "Leading": [],
                    "Length": 1,
                    "Start": 40,
                    "Text": " ",
                    "Trailing": [],
                    "Value": undefined,
                  },
                ],
                "Value": "Parameter",
              },
            ],
          },
          "start": 31,
          "value": [
            {
              "end": 45,
              "isIncomplete": false,
              "kind": 3,
              "start": 43,
              "text": "P1",
              "tokens": [
                {
                  "FullStart": 43,
                  "Kind": 600,
                  "Leading": [],
                  "Length": 2,
                  "Start": 43,
                  "Text": "P1",
                  "Trailing": [
                    {
                      "FullStart": 45,
                      "Kind": 601,
                      "Leading": [],
                      "Length": 1,
                      "Start": 45,
                      "Text": " ",
                      "Trailing": [],
                      "Value": undefined,
                    },
                  ],
                  "Value": "P1",
                },
              ],
            },
            {
              "end": 54,
              "isIncomplete": false,
              "kind": 3,
              "start": 48,
              "text": "String",
              "tokens": [
                {
                  "FullStart": 48,
                  "Kind": 600,
                  "Leading": [],
                  "Length": 6,
                  "Start": 48,
                  "Text": "String",
                  "Trailing": [
                    {
                      "FullStart": 54,
                      "Kind": 6,
                      "Leading": [],
                      "Length": 1,
                      "Start": 54,
                      "Text": "
",
                      "Trailing": [],
                      "Value": undefined,
                    },
                  ],
                  "Value": "String",
                },
              ],
            },
          ],
        },
        {
          "closeName": undefined,
          "colon": {
            "FullStart": 69,
            "Kind": 205,
            "Leading": [],
            "Length": 1,
            "Start": 69,
            "Text": ":",
            "Trailing": [
              {
                "FullStart": 70,
                "Kind": 601,
                "Leading": [],
                "Length": 1,
                "Start": 70,
                "Text": " ",
                "Trailing": [],
                "Value": undefined,
              },
            ],
            "Value": undefined,
          },
          "end": 78,
          "isAdd": false,
          "isDelete": false,
          "isIncomplete": false,
          "isLocal": false,
          "isReplace": false,
          "kind": 2,
          "name": {
            "end": 66,
            "isIncomplete": false,
            "kind": 3,
            "start": 59,
            "text": "Returns",
            "tokens": [
              {
                "FullStart": 55,
                "Kind": 600,
                "Leading": [
                  {
                    "FullStart": 55,
                    "Kind": 601,
                    "Leading": [],
                    "Length": 4,
                    "Start": 55,
                    "Text": "    ",
                    "Trailing": [],
                    "Value": undefined,
                  },
                ],
                "Length": 7,
                "Start": 59,
                "Text": "Returns",
                "Trailing": [
                  {
                    "FullStart": 66,
                    "Kind": 601,
                    "Leading": [],
                    "Length": 3,
                    "Start": 66,
                    "Text": "   ",
                    "Trailing": [],
                    "Value": undefined,
                  },
                ],
                "Value": "Returns",
              },
            ],
          },
          "start": 59,
          "value": [
            {
              "end": 78,
              "isIncomplete": false,
              "kind": 3,
              "start": 71,
              "text": "Boolean",
              "tokens": [
                {
                  "FullStart": 71,
                  "Kind": 600,
                  "Leading": [],
                  "Length": 7,
                  "Start": 71,
                  "Text": "Boolean",
                  "Trailing": [
                    {
                      "FullStart": 78,
                      "Kind": 6,
                      "Leading": [],
                      "Length": 1,
                      "Start": 78,
                      "Text": "
",
                      "Trailing": [],
                      "Value": undefined,
                    },
                  ],
                  "Value": "Boolean",
                },
              ],
            },
          ],
        },
      ],
      "closeBracket": {
        "FullStart": 25,
        "Kind": 101,
        "Leading": [],
        "Length": 1,
        "Start": 25,
        "Text": "]",
        "Trailing": [
          {
            "FullStart": 26,
            "Kind": 6,
            "Leading": [],
            "Length": 1,
            "Start": 26,
            "Text": "
",
            "Trailing": [],
            "Value": undefined,
          },
        ],
        "Value": undefined,
      },
      "closeType": undefined,
      "colon": {
        "FullStart": 10,
        "Kind": 205,
        "Leading": [],
        "Length": 1,
        "Start": 10,
        "Text": ":",
        "Trailing": [
          {
            "FullStart": 11,
            "Kind": 601,
            "Leading": [],
            "Length": 1,
            "Start": 11,
            "Text": " ",
            "Trailing": [],
            "Value": undefined,
          },
        ],
        "Value": undefined,
      },
      "complexObjects": [],
      "directives": [],
      "end": 98,
      "isAdd": false,
      "isDelete": false,
      "isIncomplete": false,
      "isLocal": false,
      "isReplace": false,
      "kind": 1,
      "modifier": undefined,
      "name": {
        "end": 25,
        "isIncomplete": false,
        "kind": 3,
        "start": 12,
        "text": "MixedFunction",
        "tokens": [
          {
            "FullStart": 12,
            "Kind": 600,
            "Leading": [],
            "Length": 13,
            "Start": 12,
            "Text": "MixedFunction",
            "Trailing": [],
            "Value": "MixedFunction",
          },
        ],
      },
      "nameCanonical": undefined,
      "openBracket": {
        "FullStart": 0,
        "Kind": 100,
        "Leading": [
          {
            "FullStart": 0,
            "Kind": 6,
            "Leading": [],
            "Length": 1,
            "Start": 0,
            "Text": "
",
            "Trailing": [],
            "Value": undefined,
          },
        ],
        "Length": 1,
        "Start": 1,
        "Text": "[",
        "Trailing": [],
        "Value": undefined,
      },
      "start": 1,
      "statements": [
        {
          "action": {
            "end": 91,
            "isIncomplete": false,
            "kind": 3,
            "start": 88,
            "text": "Log",
            "tokens": [
              {
                "FullStart": 88,
                "Kind": 600,
                "Leading": [],
                "Length": 3,
                "Start": 88,
                "Text": "Log",
                "Trailing": [
                  {
                    "FullStart": 91,
                    "Kind": 601,
                    "Leading": [],
                    "Length": 1,
                    "Start": 91,
                    "Text": " ",
                    "Trailing": [],
                    "Value": undefined,
                  },
                ],
                "Value": "Log",
              },
            ],
          },
          "args": [
            {
              "end": 98,
              "kind": 9,
              "start": 94,
              "variableName": {
                "end": 98,
                "isIncomplete": false,
                "kind": 3,
                "start": 96,
                "text": "P1",
                "tokens": [
                  {
                    "FullStart": 96,
                    "Kind": 600,
                    "Leading": [],
                    "Length": 2,
                    "Start": 96,
                    "Text": "P1",
                    "Trailing": [
                      {
                        "FullStart": 98,
                        "Kind": 6,
                        "Leading": [],
                        "Length": 1,
                        "Start": 98,
                        "Text": "
",
                        "Trailing": [],
                        "Value": undefined,
                      },
                    ],
                    "Value": "P1",
                  },
                ],
              },
            },
          ],
          "end": 98,
          "kind": 12,
          "label": {
            "end": 85,
            "isIncomplete": false,
            "kind": 3,
            "start": 83,
            "text": "00",
            "tokens": [
              {
                "FullStart": 79,
                "Kind": 603,
                "Leading": [
                  {
                    "FullStart": 79,
                    "Kind": 601,
                    "Leading": [],
                    "Length": 4,
                    "Start": 79,
                    "Text": "    ",
                    "Trailing": [],
                    "Value": undefined,
                  },
                ],
                "Length": 2,
                "Start": 83,
                "Text": "00",
                "Trailing": [
                  {
                    "FullStart": 85,
                    "Kind": 601,
                    "Leading": [],
                    "Length": 1,
                    "Start": 85,
                    "Text": " ",
                    "Trailing": [],
                    "Value": undefined,
                  },
                ],
                "Value": "00",
              },
            ],
          },
          "start": 83,
        },
      ],
      "type": {
        "end": 10,
        "isIncomplete": false,
        "kind": 3,
        "start": 2,
        "text": "Function",
        "tokens": [
          {
            "FullStart": 2,
            "Kind": 600,
            "Leading": [],
            "Length": 8,
            "Start": 2,
            "Text": "Function",
            "Trailing": [],
            "Value": "Function",
          },
        ],
      },
    },
  ],
  "end": 99,
  "errors": [],
  "kind": 0,
  "lineOffsets": [
    0,
    1,
    27,
    55,
    79,
    99,
  ],
  "start": 0,
  "text": "
[Function: MixedFunction]
    Parameter : P1 : String
    Returns   : Boolean
    00 : Log : ##P1
",
  "tokens": [
    {
      "FullStart": 0,
      "Kind": 100,
      "Leading": [
        {
          "FullStart": 0,
          "Kind": 6,
          "Leading": [],
          "Length": 1,
          "Start": 0,
          "Text": "
",
          "Trailing": [],
          "Value": undefined,
        },
      ],
      "Length": 1,
      "Start": 1,
      "Text": "[",
      "Trailing": [],
      "Value": undefined,
    },
    {
      "FullStart": 2,
      "Kind": 600,
      "Leading": [],
      "Length": 8,
      "Start": 2,
      "Text": "Function",
      "Trailing": [],
      "Value": "Function",
    },
    {
      "FullStart": 10,
      "Kind": 205,
      "Leading": [],
      "Length": 1,
      "Start": 10,
      "Text": ":",
      "Trailing": [
        {
          "FullStart": 11,
          "Kind": 601,
          "Leading": [],
          "Length": 1,
          "Start": 11,
          "Text": " ",
          "Trailing": [],
          "Value": undefined,
        },
      ],
      "Value": undefined,
    },
    {
      "FullStart": 12,
      "Kind": 600,
      "Leading": [],
      "Length": 13,
      "Start": 12,
      "Text": "MixedFunction",
      "Trailing": [],
      "Value": "MixedFunction",
    },
    {
      "FullStart": 25,
      "Kind": 101,
      "Leading": [],
      "Length": 1,
      "Start": 25,
      "Text": "]",
      "Trailing": [
        {
          "FullStart": 26,
          "Kind": 6,
          "Leading": [],
          "Length": 1,
          "Start": 26,
          "Text": "
",
          "Trailing": [],
          "Value": undefined,
        },
      ],
      "Value": undefined,
    },
    {
      "FullStart": 27,
      "Kind": 600,
      "Leading": [
        {
          "FullStart": 27,
          "Kind": 601,
          "Leading": [],
          "Length": 4,
          "Start": 27,
          "Text": "    ",
          "Trailing": [],
          "Value": undefined,
        },
      ],
      "Length": 9,
      "Start": 31,
      "Text": "Parameter",
      "Trailing": [
        {
          "FullStart": 40,
          "Kind": 601,
          "Leading": [],
          "Length": 1,
          "Start": 40,
          "Text": " ",
          "Trailing": [],
          "Value": undefined,
        },
      ],
      "Value": "Parameter",
    },
    {
      "FullStart": 41,
      "Kind": 205,
      "Leading": [],
      "Length": 1,
      "Start": 41,
      "Text": ":",
      "Trailing": [
        {
          "FullStart": 42,
          "Kind": 601,
          "Leading": [],
          "Length": 1,
          "Start": 42,
          "Text": " ",
          "Trailing": [],
          "Value": undefined,
        },
      ],
      "Value": undefined,
    },
    {
      "FullStart": 43,
      "Kind": 600,
      "Leading": [],
      "Length": 2,
      "Start": 43,
      "Text": "P1",
      "Trailing": [
        {
          "FullStart": 45,
          "Kind": 601,
          "Leading": [],
          "Length": 1,
          "Start": 45,
          "Text": " ",
          "Trailing": [],
          "Value": undefined,
        },
      ],
      "Value": "P1",
    },
    {
      "FullStart": 46,
      "Kind": 205,
      "Leading": [],
      "Length": 1,
      "Start": 46,
      "Text": ":",
      "Trailing": [
        {
          "FullStart": 47,
          "Kind": 601,
          "Leading": [],
          "Length": 1,
          "Start": 47,
          "Text": " ",
          "Trailing": [],
          "Value": undefined,
        },
      ],
      "Value": undefined,
    },
    {
      "FullStart": 48,
      "Kind": 600,
      "Leading": [],
      "Length": 6,
      "Start": 48,
      "Text": "String",
      "Trailing": [
        {
          "FullStart": 54,
          "Kind": 6,
          "Leading": [],
          "Length": 1,
          "Start": 54,
          "Text": "
",
          "Trailing": [],
          "Value": undefined,
        },
      ],
      "Value": "String",
    },
    {
      "FullStart": 55,
      "Kind": 600,
      "Leading": [
        {
          "FullStart": 55,
          "Kind": 601,
          "Leading": [],
          "Length": 4,
          "Start": 55,
          "Text": "    ",
          "Trailing": [],
          "Value": undefined,
        },
      ],
      "Length": 7,
      "Start": 59,
      "Text": "Returns",
      "Trailing": [
        {
          "FullStart": 66,
          "Kind": 601,
          "Leading": [],
          "Length": 3,
          "Start": 66,
          "Text": "   ",
          "Trailing": [],
          "Value": undefined,
        },
      ],
      "Value": "Returns",
    },
    {
      "FullStart": 69,
      "Kind": 205,
      "Leading": [],
      "Length": 1,
      "Start": 69,
      "Text": ":",
      "Trailing": [
        {
          "FullStart": 70,
          "Kind": 601,
          "Leading": [],
          "Length": 1,
          "Start": 70,
          "Text": " ",
          "Trailing": [],
          "Value": undefined,
        },
      ],
      "Value": undefined,
    },
    {
      "FullStart": 71,
      "Kind": 600,
      "Leading": [],
      "Length": 7,
      "Start": 71,
      "Text": "Boolean",
      "Trailing": [
        {
          "FullStart": 78,
          "Kind": 6,
          "Leading": [],
          "Length": 1,
          "Start": 78,
          "Text": "
",
          "Trailing": [],
          "Value": undefined,
        },
      ],
      "Value": "Boolean",
    },
    {
      "FullStart": 79,
      "Kind": 603,
      "Leading": [
        {
          "FullStart": 79,
          "Kind": 601,
          "Leading": [],
          "Length": 4,
          "Start": 79,
          "Text": "    ",
          "Trailing": [],
          "Value": undefined,
        },
      ],
      "Length": 2,
      "Start": 83,
      "Text": "00",
      "Trailing": [
        {
          "FullStart": 85,
          "Kind": 601,
          "Leading": [],
          "Length": 1,
          "Start": 85,
          "Text": " ",
          "Trailing": [],
          "Value": undefined,
        },
      ],
      "Value": "00",
    },
    {
      "FullStart": 86,
      "Kind": 205,
      "Leading": [],
      "Length": 1,
      "Start": 86,
      "Text": ":",
      "Trailing": [
        {
          "FullStart": 87,
          "Kind": 601,
          "Leading": [],
          "Length": 1,
          "Start": 87,
          "Text": " ",
          "Trailing": [],
          "Value": undefined,
        },
      ],
      "Value": undefined,
    },
    {
      "FullStart": 88,
      "Kind": 600,
      "Leading": [],
      "Length": 3,
      "Start": 88,
      "Text": "Log",
      "Trailing": [
        {
          "FullStart": 91,
          "Kind": 601,
          "Leading": [],
          "Length": 1,
          "Start": 91,
          "Text": " ",
          "Trailing": [],
          "Value": undefined,
        },
      ],
      "Value": "Log",
    },
    {
      "FullStart": 92,
      "Kind": 205,
      "Leading": [],
      "Length": 1,
      "Start": 92,
      "Text": ":",
      "Trailing": [
        {
          "FullStart": 93,
          "Kind": 601,
          "Leading": [],
          "Length": 1,
          "Start": 93,
          "Text": " ",
          "Trailing": [],
          "Value": undefined,
        },
      ],
      "Value": undefined,
    },
    {
      "FullStart": 94,
      "Kind": 202,
      "Leading": [],
      "Length": 2,
      "Start": 94,
      "Text": "##",
      "Trailing": [],
      "Value": undefined,
    },
    {
      "FullStart": 96,
      "Kind": 600,
      "Leading": [],
      "Length": 2,
      "Start": 96,
      "Text": "P1",
      "Trailing": [
        {
          "FullStart": 98,
          "Kind": 6,
          "Leading": [],
          "Length": 1,
          "Start": 98,
          "Text": "
",
          "Trailing": [],
          "Value": undefined,
        },
      ],
      "Value": "P1",
    },
    {
      "FullStart": 99,
      "Kind": 1,
      "Leading": [],
      "Length": 0,
      "Start": 99,
      "Text": "",
      "Trailing": [],
      "Value": undefined,
    },
  ],
}
`;

exports[`Parser - UDFs > should parse function with Start label 1`] = `
{
  "comments": [],
  "definitions": [
    {
      "attributes": [],
      "closeBracket": {
        "FullStart": 25,
        "Kind": 101,
        "Leading": [],
        "Length": 1,
        "Start": 25,
        "Text": "]",
        "Trailing": [
          {
            "FullStart": 26,
            "Kind": 6,
            "Leading": [],
            "Length": 1,
            "Start": 26,
            "Text": "
",
            "Trailing": [],
            "Value": undefined,
          },
        ],
        "Value": undefined,
      },
      "closeType": undefined,
      "colon": {
        "FullStart": 10,
        "Kind": 205,
        "Leading": [],
        "Length": 1,
        "Start": 10,
        "Text": ":",
        "Trailing": [
          {
            "FullStart": 11,
            "Kind": 601,
            "Leading": [],
            "Length": 1,
            "Start": 11,
            "Text": " ",
            "Trailing": [],
            "Value": undefined,
          },
        ],
        "Value": undefined,
      },
      "complexObjects": [],
      "directives": [],
      "end": 54,
      "isAdd": false,
      "isDelete": false,
      "isIncomplete": false,
      "isLocal": false,
      "isReplace": false,
      "kind": 1,
      "modifier": undefined,
      "name": {
        "end": 25,
        "isIncomplete": false,
        "kind": 3,
        "start": 12,
        "text": "StartFunction",
        "tokens": [
          {
            "FullStart": 12,
            "Kind": 600,
            "Leading": [],
            "Length": 13,
            "Start": 12,
            "Text": "StartFunction",
            "Trailing": [],
            "Value": "StartFunction",
          },
        ],
      },
      "nameCanonical": undefined,
      "openBracket": {
        "FullStart": 0,
        "Kind": 100,
        "Leading": [
          {
            "FullStart": 0,
            "Kind": 6,
            "Leading": [],
            "Length": 1,
            "Start": 0,
            "Text": "
",
            "Trailing": [],
            "Value": undefined,
          },
        ],
        "Length": 1,
        "Start": 1,
        "Text": "[",
        "Trailing": [],
        "Value": undefined,
      },
      "start": 1,
      "statements": [
        {
          "action": {
            "end": 42,
            "isIncomplete": false,
            "kind": 3,
            "start": 39,
            "text": "Log",
            "tokens": [
              {
                "FullStart": 39,
                "Kind": 600,
                "Leading": [],
                "Length": 3,
                "Start": 39,
                "Text": "Log",
                "Trailing": [
                  {
                    "FullStart": 42,
                    "Kind": 601,
                    "Leading": [],
                    "Length": 1,
                    "Start": 42,
                    "Text": " ",
                    "Trailing": [],
                    "Value": undefined,
                  },
                ],
                "Value": "Log",
              },
            ],
          },
          "args": [
            {
              "end": 54,
              "kind": 4,
              "start": 45,
              "token": {
                "FullStart": 45,
                "Kind": 604,
                "Leading": [],
                "Length": 9,
                "Start": 45,
                "Text": ""Started"",
                "Trailing": [
                  {
                    "FullStart": 54,
                    "Kind": 6,
                    "Leading": [],
                    "Length": 1,
                    "Start": 54,
                    "Text": "
",
                    "Trailing": [],
                    "Value": undefined,
                  },
                ],
                "Value": "Started",
              },
              "value": ""Started"",
            },
          ],
          "end": 54,
          "kind": 12,
          "label": {
            "end": 36,
            "isIncomplete": false,
            "kind": 3,
            "start": 31,
            "text": "Start",
            "tokens": [
              {
                "FullStart": 27,
                "Kind": 600,
                "Leading": [
                  {
                    "FullStart": 27,
                    "Kind": 601,
                    "Leading": [],
                    "Length": 4,
                    "Start": 27,
                    "Text": "    ",
                    "Trailing": [],
                    "Value": undefined,
                  },
                ],
                "Length": 5,
                "Start": 31,
                "Text": "Start",
                "Trailing": [
                  {
                    "FullStart": 36,
                    "Kind": 601,
                    "Leading": [],
                    "Length": 1,
                    "Start": 36,
                    "Text": " ",
                    "Trailing": [],
                    "Value": undefined,
                  },
                ],
                "Value": "Start",
              },
            ],
          },
          "start": 31,
        },
      ],
      "type": {
        "end": 10,
        "isIncomplete": false,
        "kind": 3,
        "start": 2,
        "text": "Function",
        "tokens": [
          {
            "FullStart": 2,
            "Kind": 600,
            "Leading": [],
            "Length": 8,
            "Start": 2,
            "Text": "Function",
            "Trailing": [],
            "Value": "Function",
          },
        ],
      },
    },
  ],
  "end": 55,
  "errors": [],
  "kind": 0,
  "lineOffsets": [
    0,
    1,
    27,
    55,
  ],
  "start": 0,
  "text": "
[Function: StartFunction]
    Start : Log : "Started"
",
  "tokens": [
    {
      "FullStart": 0,
      "Kind": 100,
      "Leading": [
        {
          "FullStart": 0,
          "Kind": 6,
          "Leading": [],
          "Length": 1,
          "Start": 0,
          "Text": "
",
          "Trailing": [],
          "Value": undefined,
        },
      ],
      "Length": 1,
      "Start": 1,
      "Text": "[",
      "Trailing": [],
      "Value": undefined,
    },
    {
      "FullStart": 2,
      "Kind": 600,
      "Leading": [],
      "Length": 8,
      "Start": 2,
      "Text": "Function",
      "Trailing": [],
      "Value": "Function",
    },
    {
      "FullStart": 10,
      "Kind": 205,
      "Leading": [],
      "Length": 1,
      "Start": 10,
      "Text": ":",
      "Trailing": [
        {
          "FullStart": 11,
          "Kind": 601,
          "Leading": [],
          "Length": 1,
          "Start": 11,
          "Text": " ",
          "Trailing": [],
          "Value": undefined,
        },
      ],
      "Value": undefined,
    },
    {
      "FullStart": 12,
      "Kind": 600,
      "Leading": [],
      "Length": 13,
      "Start": 12,
      "Text": "StartFunction",
      "Trailing": [],
      "Value": "StartFunction",
    },
    {
      "FullStart": 25,
      "Kind": 101,
      "Leading": [],
      "Length": 1,
      "Start": 25,
      "Text": "]",
      "Trailing": [
        {
          "FullStart": 26,
          "Kind": 6,
          "Leading": [],
          "Length": 1,
          "Start": 26,
          "Text": "
",
          "Trailing": [],
          "Value": undefined,
        },
      ],
      "Value": undefined,
    },
    {
      "FullStart": 27,
      "Kind": 600,
      "Leading": [
        {
          "FullStart": 27,
          "Kind": 601,
          "Leading": [],
          "Length": 4,
          "Start": 27,
          "Text": "    ",
          "Trailing": [],
          "Value": undefined,
        },
      ],
      "Length": 5,
      "Start": 31,
      "Text": "Start",
      "Trailing": [
        {
          "FullStart": 36,
          "Kind": 601,
          "Leading": [],
          "Length": 1,
          "Start": 36,
          "Text": " ",
          "Trailing": [],
          "Value": undefined,
        },
      ],
      "Value": "Start",
    },
    {
      "FullStart": 37,
      "Kind": 205,
      "Leading": [],
      "Length": 1,
      "Start": 37,
      "Text": ":",
      "Trailing": [
        {
          "FullStart": 38,
          "Kind": 601,
          "Leading": [],
          "Length": 1,
          "Start": 38,
          "Text": " ",
          "Trailing": [],
          "Value": undefined,
        },
      ],
      "Value": undefined,
    },
    {
      "FullStart": 39,
      "Kind": 600,
      "Leading": [],
      "Length": 3,
      "Start": 39,
      "Text": "Log",
      "Trailing": [
        {
          "FullStart": 42,
          "Kind": 601,
          "Leading": [],
          "Length": 1,
          "Start": 42,
          "Text": " ",
          "Trailing": [],
          "Value": undefined,
        },
      ],
      "Value": "Log",
    },
    {
      "FullStart": 43,
      "Kind": 205,
      "Leading": [],
      "Length": 1,
      "Start": 43,
      "Text": ":",
      "Trailing": [
        {
          "FullStart": 44,
          "Kind": 601,
          "Leading": [],
          "Length": 1,
          "Start": 44,
          "Text": " ",
          "Trailing": [],
          "Value": undefined,
        },
      ],
      "Value": undefined,
    },
    {
      "FullStart": 45,
      "Kind": 604,
      "Leading": [],
      "Length": 9,
      "Start": 45,
      "Text": ""Started"",
      "Trailing": [
        {
          "FullStart": 54,
          "Kind": 6,
          "Leading": [],
          "Length": 1,
          "Start": 54,
          "Text": "
",
          "Trailing": [],
          "Value": undefined,
        },
      ],
      "Value": "Started",
    },
    {
      "FullStart": 55,
      "Kind": 1,
      "Leading": [],
      "Length": 0,
      "Start": 55,
      "Text": "",
      "Trailing": [],
      "Value": undefined,
    },
  ],
}
`;
